# rocrate-action-recorder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/plans/: argparse-adaptor.md  argparse.FileType.md  dir-io.md  repeat-call.md  reuse-file.md  software-update.md
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.md
example/: README.md  myscript.py  ro-crate-metadata.json
src/rocrate_action_recorder/: __init__.py  action.py  core.py  parser.py
src/rocrate_action_recorder/adapters/: argparse.py
tests/: conftest.py  test_core.py  test_directory_io.py  test_record.py  test_record_with_argparse.py
tests/adapters/: test_argparse.py
