[project]
name = "rocrate-action-recorder"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefan Verhoeven", email = "stefan.verhoeven@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rocrate>=0.14.2",
]
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rocrate_action_recorder/__about__.py"

[dependency-groups]
dev = [
  {include-group = "typecheck"},
  {include-group = "test"}
]
typecheck = [
    "pyright>=1.1.408",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "roc-validator>=0.8.0",
]

[tool.pytest]
minversion = "9.0"
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["src"]

[tool.pyright]
include = ['src']
pythonVersion = "3.14"
pythonPlatform = "Linux"
